--- a/views/login.ejs
+++ b/views/login.ejs
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>signup</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
@@ -58,7 +58,7 @@
                   <p class="text-sm font-semibold mt-2 pt-1 mb-0">
                     Don't have an account?
                     <a
-                      href="#!"
+                      href="views/signup.ejs"
                       class="text-red-600 hover:text-red-700 focus:text-red-700 transition duration-200 ease-in-out"
                       >Register</a
                     >
