--- a/views/login.ejs
+++ b/views/login.ejs
@@ -58,8 +58,8 @@
                   <p class="text-sm font-semibold mt-2 pt-1 mb-0">
                     Don't have an account?
                     <a
-                      href="views/signup.ejs"
-                      class="text-red-600 hover:text-red-700 focus:text-red-700 transition duration-200 ease-in-out"
+                      href="/signup"
+                      class="text-red-600 hover:text-blue-700 focus:text-red-700 transition duration-200 ease-in-out"
                       >Register</a
                     >
                   </p>
