changed email to username

--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -29,7 +29,7 @@
                       type="button"
                       data-mdb-ripple="true"
                       data-mdb-ripple-color="light"
-                      class="inline-block p-3  text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out mx-1"
+                      class="inline-block p-3 border border-blue-800  text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:border-black hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out mx-1"
                     >
                       <!-- github-->
                       <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
@@ -43,7 +43,7 @@
                       type="button"
                       data-mdb-ripple="true"
                       data-mdb-ripple-color="light"
-                      class="inline-block p-3 text-white font-medium text-xs leading-tight uppercase rounded-full shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out mx-1"
+                      class="inline-block p-3 text-white font-medium text-xs border border-blue-800 leading-tight uppercase rounded-full shadow-md hover:bg-blue-700  hover:border-black hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out mx-1"
                     >
                       <!-- Twitter -->
                       <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px"
@@ -62,13 +62,12 @@
                     <p class="text-center font-semibold mx-4 mb-0">Or</p>
                   </div>
         
-                  <!-- Email input -->
+                  <!-- username input -->
                   <div class="mb-6">
                     <input
                       type="text"
                       class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                      id="exampleFormControlInput2"
-                      placeholder="Email address"
+                      placeholder="Enter Username"
                     />
                   </div>
         
@@ -77,14 +76,9 @@
                     <input
                       type="password"
                       class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
-                      id="exampleFormControlInput2"
                       placeholder="Password"
                     />
                   </div>
-        
-                     
-                     
-        
                   <div class="text-center lg:text-left">
                     <button
                       type="button"
@@ -98,5 +92,7 @@
             </div>
           </div>
         </section>
+  </body>
+  </html>
   </body>
   </html>
