--- a/views/index.ejs
+++ b/views/index.ejs
@@ -227,7 +227,7 @@
 
 <footer>
     <div class="px-10 py-8 bg-slate-100">
-        <p class="text-gray-400 text-center">By nishanth and mehul @copyright reserved 2023 </p>
+        <p class="text-gray-400 text-center">By Nishanth and Mehul @copyright reserved 2023 </p>
     </div>
 </footer>
 
