--- a/views/index.ejs
+++ b/views/index.ejs
@@ -47,11 +47,11 @@
             <button type="submit" class="absolute right-0 top-0 mt-3 mr-2"><span class="fa-solid fa-magnifying-glass"></span></button>
         </div>
         <div class="flex ">
-            <a href="#"
+            <a href="/"
                class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">Sign
                 in</a>
 
-            <a href="#"
+            <a href="/signup"
                class=" block text-md px-4  ml-2 py-2 rounded text-blue-700 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">login</a>
         </div>
     </div>
