--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,14 +1,4 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <script src="https://cdn.tailwindcss.com"></script>
-    <title >Blogspace</title>
-    
-</head>
+<%- include('./boilerplate/header.ejs') %> 
 <body class=" bg-white ">
     <nav
     class="flex items-center justify-between flex-wrap bg-slate-200 py-4 lg:px-12 shadow border-t-2  border-blue-700">
@@ -56,14 +46,14 @@
         </div>
     </div>
 </nav>
-
+<!-- 
 <div class="py-6">
     <h1 class="text-4xl text-blue-700 px-16  italic underline underline-offset-4">Recent posts</h1>
     <div class="px-16">
         <hr class="border-x-2 border-blue-300 px-7">
     </div>
     
-</div>
+</div> -->
 
 
 <!-- section side  -->
@@ -71,23 +61,7 @@
     <!-- Card start -->
       <div class="transition-all duration-150 flex w-full px-3  py-6 md:w-1/2 lg:w-1/3 ">
         <div class="flex flex-col items-stretch min-h-full pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
-          <div class="md:flex-shrink-0">
-            <!-- post image -->
-            <img
-              src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder-1024x512.png"
-              alt="Blog Cover"
-              class="object-fill w-full rounded-lg rounded-b-none md:h-56"
-            />
-          </div>
           
-          <hr class="border-gray-300" />
-          <div class="flex flex-wrap items-center flex-1 px-4 py-1 text-center mx-auto">
-            <a href="#" class="hover:underline">
-              <h2 class="text-2xl font-bold tracking-normal text-gray-800">
-               Title display maadu
-              </h2>
-            </a>
-          </div>
           <hr class="border-gray-300" />
           <p class="flex flex-row flex-wrap w-full px-4 py-2 overflow-hidden text-sm text-justify text-gray-700">
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, magni
@@ -120,114 +94,14 @@
         </div>
       </div>
       
-     <!--innond Card start -->
-     <div class="transition-all duration-150 flex w-full  py-6 px-3 md:w-1/2 lg:w-1/3 ">
-        <div class="flex flex-col items-stretch min-h-full pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
-          <div class="md:flex-shrink-0">
-            <!-- post image -->
-            <img
-              src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder-1024x512.png"
-              alt="Blog Cover"
-              class="object-fill w-full rounded-lg rounded-b-none md:h-56"
-            />
-          </div>
-          
-          <hr class="border-gray-300" />
-          <div class="flex flex-wrap items-center flex-1 px-4 py-1 text-center mx-auto">
-            <a href="#" class="hover:underline">
-              <h2 class="text-2xl font-bold tracking-normal text-gray-800">
-               Title display maadu
-              </h2>
-            </a>
-          </div>
-          <hr class="border-gray-300" />
-          <p class="flex flex-row flex-wrap w-full px-4 py-2 overflow-hidden text-sm text-justify text-gray-700">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, magni
-            fugiat, odit incidunt necessitatibus aut nesciunt exercitationem aliquam
-            id voluptatibus quisquam maiores officia sit amet accusantium aliquid
-            quo obcaecati quasi.
-          </p>
-          <hr class="border-gray-300" />
-          <div class="px-4 py-2 mt-2">
-            <div class="flex items-center justify-between">
-              <div class="flex items-center flex-1">
-                <img
-                  class="object-cover h-10 rounded-full"
-                  src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
-                  alt="user_image"
-                />
-                <div class="flex flex-col mx-2">
-                  <a href="" class="font-semibold text-gray-700 hover:underline">
-                    nishanth bhai 
-                  </a>
-                  <span class="mx-1 text-xs text-gray-600">date haku</span>
-                </div>
-              </div>
-              <p class="mt-1 text-xs text-gray-600">time read ago haku illare beda</p>
-            </div>
-            <form class="flex justify-end" action="" method="">
-                <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
-            </form>
-        </div>
-        </div>
-      </div>
-      <div class="transition-all duration-150 flex w-full  py-6 px-3 md:w-1/2 lg:w-1/3 ">
-        <div class="flex flex-col items-stretch min-h-full pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
-          <div class="md:flex-shrink-0">
-            <!-- post image -->
-            <img
-              src="https://www.unfe.org/wp-content/uploads/2019/04/SM-placeholder-1024x512.png"
-              alt="Blog Cover"
-              class="object-fill w-full rounded-lg rounded-b-none md:h-56"
-            />
-          </div>
-          
-          <hr class="border-gray-300" />
-          <div class="flex flex-wrap items-center flex-1 px-4 py-1 text-center mx-auto">
-            <a href="#" class="hover:underline">
-              <h2 class="text-2xl font-bold tracking-normal text-gray-800">
-               Title display maadu
-              </h2>
-            </a>
-          </div>
-          <hr class="border-gray-300" />
-          <p class="flex flex-row flex-wrap w-full px-4 py-2 overflow-hidden text-sm text-justify text-gray-700">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Alias, magni
-            fugiat, odit incidunt necessitatibus aut nesciunt exercitationem aliquam
-            id voluptatibus quisquam maiores officia sit amet accusantium aliquid
-            quo obcaecati quasi.
-          </p>
-          <hr class="border-gray-300" />
-          <div class="px-4 py-2 mt-2">
-            <div class="flex items-center justify-between">
-              <div class="flex items-center flex-1">
-                <img
-                  class="object-cover h-10 rounded-full"
-                  src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
-                  alt="user_image"
-                />
-                <div class="flex flex-col mx-2">
-                  <a href="" class="font-semibold text-gray-700 hover:underline">
-                    nishanth bhai 
-                  </a>
-                  <span class="mx-1 text-xs text-gray-600">date haku</span>
-                </div>
-              </div>
-              <p class="mt-1 text-xs text-gray-600">time read ago haku illare beda</p>
-            </div>
-            <form class="flex justify-end" action="" method="">
-                <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
-            </form>
-        </div>
-        </div>
-      </div>    
+       
       
       
 </section>
 
-<footer>
-    <div class="px-10 py-8 bg-slate-100">
-        <p class="text-gray-400 text-center">By Nishanth and Mehul @copyright reserved 2023 </p>
+<footer >
+    <div class="px-10 py-8 bg-slate-100 ">
+        <p class="text-gray-400 text-center">By Nishanth and Mehul &copy;copyright reserved 2023 </p>
     </div>
 </footer>
 
