--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,11 +1,4 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>signup | blogSpace</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
+<%- include('./boilerplate/header.ejs') %> 
 <body>
     <section class="h-screen">
         <div class="px-6 h-full text-gray-800">
