--- a/views/index.ejs
+++ b/views/index.ejs
@@ -37,13 +37,18 @@
             <button type="submit" class="absolute right-0 top-0 mt-3 mr-2"><span class="fa-solid fa-magnifying-glass"></span></button>
         </div>
         <div class="flex ">
+          <% if(!currentUser) {%> 
             <a href="/"
                class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">Sign
                 in</a>
 
             <a href="/signup"
                class=" block text-md px-4  ml-2 py-2 rounded text-blue-700 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">login</a>
-        </div>
+              <% } else { %> 
+            <a href="/logout"
+               class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">logout</a>
+               <% } %> 
+              </div>
     </div>
 </nav>
 <!-- 
