--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('./boilerplate/header.ejs') %> 
-<body class=" bg-white ">
+<body class=" bg-white flex flex-col min-h-screen">
     <nav
     class="flex items-center justify-between flex-wrap bg-slate-200 py-4 lg:px-12 shadow border-t-2  border-blue-700">
     <div class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
@@ -103,7 +103,7 @@
       
 </section>
 
-<footer >
+<footer class="mt-auto">
     <div class="px-10 py-8 bg-slate-100 ">
         <p class="text-gray-400 text-center">By Nishanth and Mehul &copy;copyright reserved 2023 </p>
     </div>
