--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -89,4 +89,9 @@
     </div>
 </div>
 </body>
+<footer class="mt-auto">
+    <div class="px-10 py-8 bg-slate-100 ">
+        <p class="text-gray-400 text-center">By Nishanth and Mehul &copy;copyright reserved 2023 </p>
+    </div>
+</footer>
 </html>
