--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -68,8 +68,7 @@
           <p class="text-sm md:text-base font-normal text-gray-600">Date haku illi</p>
     </div>
     <!-- profile haku bekidre illare beda -->
-    <p class="py-6">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas, doloribus doloremque est adipisci voluptatem non molestias itaque officiis. Quibusdam atque doloremque delectus adipisci voluptates fugiat minima obcaecati labore nulla veniam. Lorem ipsum dolor, sit amet consectetur adipisicing elit. Obcaecati praesentium aspernatur corporis velit, aliquid error debitis expedita molestias! Saepe rem quidem eos voluptas modi molestiae labore repellat reprehenderit repellendus corporis!</p>
-    <p class="py-6">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Magni obcaecati dolor suscipit dignissimos laborum, fugit ratione enim dolores, aut doloribus natus provident numquam saepe aspernatur. Voluptatum quaerat perspiciatis vero beatae?Lorem ipsum dolor sit amet, consectetur adipisicing elit. Optio tenetur cum nesciunt minima dicta omnis. Necessitatibus optio suscipit asperiores esse. Dolore minus repellat minima tenetur quos repudiandae rem rerum at.</p>
+    <p class="py-6"> <%= blogv.blogMessage %> </p>
   </div>
   <div class="px-7 py-2 ">
     <div class="flex items-center justify-between">
