--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,7 +16,7 @@
 
     <div class="menu w-full  flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8">
         <div class="text-md font-bold text-blue-700 lg:flex-grow">
-            <a href="#home"
+            <a href="/index"
                class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Home
             </a>
