--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -77,7 +77,7 @@
                       type="button"
                       class="inline-block px-7 py-3 bg-white-600 text-black border border-blue-800 font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700  hover:border-black hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
                     >
-                      Login
+                      register
                     </button>
                   </div>
                 </form>
