--- a/views/index.ejs
+++ b/views/index.ejs
@@ -20,7 +20,7 @@
                class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Home
             </a>
-            <a href="#profile"
+            <a href="/profile"
                class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Profile
             </a>
