--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -15,7 +15,7 @@
                 />
               </div>
               <div class="xl:ml-20 xl:w-5/12 lg:w-5/12 md:w-8/12 mb-12 md:mb-0">
-                <form>
+                <form action="/register" method="post">
                   <div class="flex flex-row items-center justify-center lg:justify-start">
                     <p class="text-lg mb-0 mr-4">Sign in with</p>
                     <button
@@ -54,6 +54,14 @@
                   >
                     <p class="text-center font-semibold mx-4 mb-0">Or</p>
                   </div>
+                  <div class="mb-6">
+                    <input
+                      type="text"
+                      class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
+                      placeholder="Enter email"
+                      name="user[email]"
+                    />
+                  </div>
         
                   <!-- username input -->
                   <div class="mb-6">
@@ -61,6 +69,7 @@
                       type="text"
                       class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
                       placeholder="Enter Username"
+                      name="user[username]"
                     />
                   </div>
         
@@ -70,15 +79,17 @@
                       type="password"
                       class="form-control block w-full px-4 py-2 text-xl font-normal text-gray-700 bg-white bg-clip-padding border border-solid border-gray-300 rounded transition ease-in-out m-0 focus:text-gray-700 focus:bg-white focus:border-blue-600 focus:outline-none"
                       placeholder="Password"
+                      name="password"
                     />
                   </div>
                   <div class="text-center lg:text-left">
                     <button
-                      type="button"
+                      type="submit"
                       class="inline-block px-7 py-3 bg-white-600 text-black border border-blue-800 font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700  hover:border-black hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
                     >
                       register
                     </button>
+                    <a href="/" >Login</a>
                   </div>
                 </form>
               </div>
