--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,13 +1,4 @@
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.1/css/all.min.css" integrity="sha512-MV7K8+y+gLIBoVD59lQIYicR65iaqukzvf/nwasF0nqhPay5w/9lJmVM2hMDcnK1OnMGCdVK+iQrJ7lzPJQd1w==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <title>profile</title>
-    
-</head>
+<%- include('./boilerplate/header.ejs') %> 
 <body>
     <nav
     class="flex items-center justify-between flex-wrap bg-slate-100 py-4 lg:px-12 shadow border-solid border-t-2 border-blue-700">
@@ -33,10 +24,10 @@
                class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 Profile
             </a>
-            <a href="#"
+            <!-- <a href="#"
                class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
                 post
-            </a>
+            </a> -->
         </div>
        
         <div class="relative mx-auto text-gray-600 lg:block hidden">
