--- a/views/index.ejs
+++ b/views/index.ejs
@@ -44,7 +44,7 @@
             <p class="flex flex-row flex-wrap w-full px-4 py-2 overflow-hidden text-sm text-justify text-gray-700">
               <%= blogs[index].blogMessage %> 
             </p>
-            <form class="flex justify-center my-2" action="" method="">
+            <form class="flex justify-center my-2" action="./index/<%= blogs[index].id%>" method="">
                 <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
             </form>
         </div>
