--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -61,7 +61,7 @@
     
       <div class="mt-20 text-center border-b pb-12">
         <!-- DISPLAY NAME -->
-        <h1 class="text-4xl font-medium text-gray-700">Nishanth v, <span class="font-light text-gray-500">20</span></h1>
+        <h1 class="text-4xl font-medium text-gray-700"><%= %> <span class="font-light text-gray-500">20</span></h1>
         <!-- DISPLAY LOCATION IF REQUIRED -->
         <p class="font-light text-gray-600 mt-3">India, banglore</p>
         <!-- DISPLAY WORK  -->
