posting blog route added

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -58,10 +58,10 @@
 
 
 <div class="px-8 py-2 ">
-  <form action="">
+  <form action="/post/blog" method="post">
     <div class="bg-white p-4 rounded-lg shadow-md px-4">
       <div class="text-gray-700 font-medium text-lg mb-4 flex justify-center "><h1 class="text-3xl" > Write your post here!!</h1></div>
-      <input placeholder="write your content!! " type="text" class="block w-full py-8 px-4 rounded-md bg-white border border-gray-300 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
+      <input placeholder="write your content!! "name="message" type="text" class="block w-full py-8 px-4 rounded-md bg-white border border-gray-300 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
       <div class="flex justify-center py-2">
         <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Post
         </button>
