--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -27,7 +27,7 @@
           alt="user_image"
         />
         <div class="flex flex-col mx-2">
-          <a href="" class="font-semibold text-gray-700 hover:underline">
+          <a href="/profile/<%=blogv.username %>" class="font-semibold text-gray-700 hover:underline">
             <%=blogv.username %>
           </a>
           <span class="mx-1 text-xs text-gray-600">date haku</span>
