--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -7,17 +7,6 @@
 <div class="py-6">
   <div class="container w-full md:max-w-3xl mx-auto pt-20 py-5 bg-white rounded-xl">
 
-    <div class="w-full px-4 md:px-6 text-xl text-gray-800 leading-normal" style="font-family:Georgia,serif;">
-
-    <!--Title illi-->
-    <div class="font-sans">
-      
-          <!-- <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Post title haku</h1> -->
-          <p class="text-sm md:text-base font-normal text-gray-600">Date haku illi</p>
-    </div>
-    <!-- profile haku bekidre illare beda -->
-    <p class="py-6"> <%= blogv.blogMessage %> </p>
-  </div>
   <div class="px-7 py-2 ">
     <div class="flex items-center justify-between">
       <div class="flex items-center flex-1">
@@ -33,11 +22,25 @@
           <span class="mx-1 text-xs text-gray-600">date haku</span>
         </div>
       </div>
+      
       <p class="mt-1 text-xs text-gray-600"></p>
     </div>
-    <form class="flex justify-evenly" action="" method="">
+    <div class="w-full h-full px-4 md:px-6 text-xl text-gray-800 leading-normal" style="font-family:Georgia,serif;">
+
+      <!--Title illi-->
+      <!-- <div class="font-sans">
+        
+            <h1 class="font-bold font-sans break-normal text-gray-900 pt-6 pb-2 text-3xl md:text-4xl">Post title haku</h1>
+           
+      </div> -->
+      
+      <p class="py-6"> <%= blogv.blogMessage %> </p>
+    </div>
+    <div>
+      <form class="flex justify-evenly" action="" method="">
         <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
     </form>
+    </div>
 </div>
 </div>
 </div> 
