BG-Color change

--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -1,6 +1,6 @@
 <html lang="en">
   <%- include('./boilerplate/header.ejs') %> 
-<body class="flex flex-col min-h-screen bg-blue-700">
+<body class=" bg-gradient-to-l from-sky-400 to-purple-600 flex flex-col min-h-screen bg-blue-700">
   <%- include('./boilerplate/navbar.ejs') %> 
 
 <br/>
