--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,5 +1,5 @@
 <%- include('./boilerplate/header.ejs') %> 
-<body>
+<body class="bg-gradient-to-l from-sky-400 to-purple-600">
     <section class="h-screen bg-blue-600">
         <div class="px-6 h-full text-gray-800">
           <div
