--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,5 +1,5 @@
 <%- include('./boilerplate/header.ejs') %> 
-<body>
+<body class="bg-gradient-to-l from-sky-400 to-purple-600">
     <%- include('./boilerplate/navbar.ejs') %> 
 <br/>
 <!-- profile page starts from here  -->
