--- a/views/boilerplate/navbar.ejs
+++ b/views/boilerplate/navbar.ejs
@@ -1,8 +1,8 @@
 <nav
-    class="flex items-center justify-between flex-wrap bg-slate-200 py-4 lg:px-12 shadow border-t-2  border-blue-700">
+    class="flex items-center justify-between flex-wrap bg-slate-200 py-4 lg:px-12 shadow border-t-2  border-blue-700 fixed top-0 w-full">
     <div class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
         <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
-            <span class="font-semibold tracking-tight text-3xl  hover:text-blue-700 hover:border-blue-700">Blogspace</span>
+            <span class="font-semibold tracking-tight text-3xl  hover:text-purple-400 ">Blogspace</span>
         </div>
         <div class="block lg:hidden ">
             <button
@@ -13,14 +13,14 @@
     </div>
 
     <div class="menu w-full  flex-grow lg:flex lg:items-center lg:w-auto lg:px-3 px-8">
-        <div class="text-md font-bold text-blue-700 lg:flex-grow">
+        <div class="text-md font-bold text-purple-500 lg:flex-grow">
             <a href="/index"
-               class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
+               class="block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-purple-400 mr-2">
                 Home
             </a>
             <% if(currentUser) {%> 
             <a href="/profile/<%=currentUser.username%> "
-               class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-blue-700 mr-2">
+               class=" block mt-4 lg:inline-block lg:mt-0 hover:text-white px-4 py-2 rounded hover:bg-purple-400 mr-2">
                 Profile
             </a>
             <% } %> 
@@ -35,13 +35,13 @@
         <div class="flex ">
           <% if(!currentUser) {%> 
             <a href="/"
-               class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">login</a>
+               class="block text-md px-4 py-2 rounded text-purple-500 ml-2 font-bold hover:text-white mt-4 hover:bg-purple-400 lg:mt-0">login</a>
 
             <a href="/signup"
-               class=" block text-md px-4  ml-2 py-2 rounded text-blue-700 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">signup</a>
+               class=" block text-md px-4  ml-2 py-2 rounded text-purple-500 font-bold hover:text-white mt-4 hover:bg-purple-400 lg:mt-0">signup</a>
               <% } else { %> 
             <a href="/logout"
-               class="block text-md px-4 py-2 rounded text-blue-700 ml-2 font-bold hover:text-white mt-4 hover:bg-blue-700 lg:mt-0">logout</a>
+               class="block text-md px-4 py-2 rounded text-purple-500 ml-2 font-bold hover:text-white mt-4 hover:bg-purple-400 lg:mt-0">logout</a>
                <% } %> 
               </div>
     </div>
