--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,5 @@
 <%- include('./boilerplate/header.ejs') %> 
-<body class=" bg-gradient-to-l from-sky-400 to-purple-600 flex flex-col min-h-screen">
+<body class=" bg-gradient-to-l from-sky-400 to-purple-600 flex flex-col min-h-screen mt-16">
   <%- include('./boilerplate/navbar.ejs') %> 
 <!-- 
 <div class="py-6">
@@ -44,10 +44,10 @@
             <p class="flex flex-row flex-wrap w-full px-4 py-6 overflow-hidden text-sm text-justify text-gray-700">
               <%= blogs[index].blogMessage %> 
             </p>
-            <div class="relative ">
+            <div class=" ">
               <div class=" inset-y-0 bottom-0 left-0 right-0  justify-center items-end">
                 <form class="flex justify-center my-2" action="./index/<%= blogs[index].id%>" method="">
-                  <button type="submit" class="inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
+                  <button type="submit" class="inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-400 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
                 </form>
               </div>
             </div>
@@ -67,7 +67,7 @@
       <div class="text-gray-700 font-medium text-lg mb-4 flex justify-center "><h1 class="text-3xl" > Write your post here!!</h1></div>
       <input placeholder="write your content!! "name="message" type="text" class="block w-full py-8 px-4 rounded-md bg-white border border-gray-300 text-gray-700 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:border-blue-500">
       <div class="flex justify-center py-2">
-        <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Post
+        <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-400 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">Post
         </button>
       </div>
       </div>
