--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,6 +1,6 @@
 <%- include('./boilerplate/header.ejs') %> 
-<body class="bg-gradient-to-l from-sky-400 to-purple-600">
-    <section class="h-screen bg-blue-600">
+<body >
+    <section class="h-screen bg-gradient-to-l from-sky-400 to-purple-600">
         <div class="px-6 h-full text-gray-800">
           <div
             class="flex xl:justify-center lg:justify-between justify-center items-center flex-wrap h-full g-6"
@@ -44,7 +44,7 @@
                 <div class="text-center lg:text-left px-36 ">
                   <button
                     type="submit"
-                    class="inline-block px-28 py-3 bg-white-600 text-white border border-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-700  hover:border-white  hover:text-white hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
+                    class="inline-block px-28 py-3 bg-white-600 text-white border border-white font-medium text-sm leading-snug uppercase rounded shadow-md hover:bg-blue-400  hover:border-white  hover:text-white hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out"
                   >
                     Login
                   </button>
