--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -4,8 +4,8 @@
   <%- include('./boilerplate/navbar.ejs') %> 
 
 <br/>
-<div class="py-6">
-  <div class="container w-full md:max-w-3xl mx-auto pt-20 py-5 bg-white rounded-xl">
+<div class="py-9 m-9 ">
+  <div class="container w-full h-fit md:max-w-3xl mx-auto pt-20  bg-white rounded-xl">
 
   <div class="px-7 py-2 ">
     <div class="flex items-center justify-between">
@@ -19,7 +19,7 @@
           <a href="/profile/<%=blogv.username %>" class="font-semibold text-gray-700 hover:underline">
             <%=blogv.username %>
           </a>
-          <span class="mx-1 text-xs text-gray-600">date haku</span>
+          <!-- <span class="mx-1 text-xs text-gray-600">date haku</span> -->
         </div>
       </div>
       
@@ -36,11 +36,23 @@
       
       <p class="py-6"> <%= blogv.blogMessage %> </p>
     </div>
-    <div>
-      <form class="flex justify-evenly" action="/comment/<%=blogv.id%>" method="post">
-        <button type="submit" class=" inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
-    </form>
-    </div>
+    
+      <div class="flex mx-auto items-center  border-blue-400 justify-center shadow-lg mt-56  mb-4 max-w-lg">
+        <form class="w-full max-w-xl  bg-white rounded-lg px-4 pt-2" method="post" action="/comment/<%=blogv.id%>">
+           <div class="flex flex-wrap -mx-3 mb-6">
+              <h2 class="px-4 pt-3 pb-2 text-gray-800 text-lg">Add a new comment</h2>
+              <div class="w-full md:w-full px-3 mb-2 mt-2">
+                 <input name="comment" class="bg-gray-100 rounded border border-blue-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment here' required>
+              </div>
+              <div class="w-full md:w-full flex items-stretch  px-3">
+                 <div class="-mr-1">
+                   <a href="/"> <button type='submit' class="bg-white text-gray-700 font-medium py-1 px-4 border border-blue-400 rounded-lg tracking-wide mr-1 hover:text-white hover:border-blue-700 hover:bg-blue-700">Comment</button></a>
+                 </div>
+              </div>
+           </form>
+        </div>
+     </div>
+    
 </div>
 </div>
 </div> 
@@ -48,7 +60,7 @@
 </div>
 </body> 
 
-<footer class="mt-auto">
+<footer class=" mt-auto fixed bottom-0 w-full">
   <div class="px-10 py-8 bg-slate-100 ">
       <p class="text-gray-400 text-center">By Nishanth and Mehul &copy;copyright reserved 2023 </p>
   </div>
