--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -40,13 +40,12 @@
       <div class="flex mx-auto items-center  border-blue-400 justify-center shadow-lg mt-56  mb-4 max-w-lg">
         <form class="w-full max-w-xl  bg-white rounded-lg px-4 pt-2" method="post" action="/comment/<%=blogv.id%>">
            <div class="flex flex-wrap -mx-3 mb-6">
-              <h2 class="px-4 pt-3 pb-2 text-gray-800 text-lg">Add a new comment</h2>
               <div class="w-full md:w-full px-3 mb-2 mt-2">
-                 <input name="comment" class="bg-gray-100 rounded border border-blue-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment here' required>
+                 <input name="comment" class="bg-gray-100 rounded border border-purple-400 leading-normal resize-none w-full h-20 py-2 px-3 font-medium placeholder-gray-700 focus:outline-none focus:bg-white" name="body" placeholder='Type Your Comment here' required>
               </div>
               <div class="w-full md:w-full flex items-stretch  px-3">
                  <div class="-mr-1">
-                   <a href="/"> <button type='submit' class="bg-white text-gray-700 font-medium py-1 px-4 border border-blue-400 rounded-lg tracking-wide mr-1 hover:text-white hover:border-blue-700 hover:bg-blue-700">Comment</button></a>
+                   <a href="/"> <button type='submit' class="bg-white text-gray-700 font-medium py-1 px-4 border border-purple-400 rounded-lg tracking-wide mr-1 hover:text-white hover:border-blue-700 hover:bg-purple-500">Comment</button></a>
                  </div>
               </div>
            </form>
