--- a/views/boilerplate/navbar.ejs
+++ b/views/boilerplate/navbar.ejs
@@ -1,5 +1,5 @@
 <nav
-    class="flex items-center justify-between flex-wrap bg-slate-200 py-4 lg:px-12 shadow border-t-2  border-blue-700 fixed top-0 w-full">
+    class="flex items-center justify-between flex-wrap bg-slate-200 py-4 lg:px-12 shadow border-t-2  border-blue-700 fixed top-0 w-full z-10">
     <div class="flex justify-between lg:w-auto w-full lg:border-b-0 pl-6 pr-2 border-solid border-b-2 border-gray-300 pb-5 lg:pb-0">
         <div class="flex items-center flex-shrink-0 text-gray-800 mr-16">
             <span class="font-semibold tracking-tight text-3xl  hover:text-purple-400 ">Blogspace</span>
