--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -16,8 +16,8 @@
     
       <div class="mt-20 text-center border-b pb-12">
         <!-- DISPLAY NAME -->
-        <h1 class="text-4xl font-medium text-gray-700"><%= profile.username %> </h1>
-        <p class="text-1xl font-medium text-gray-700"><%= profile.email %> </p>
+        <h1 class="text-5xl font-medium text-gray-700"><%= profile.username %> </h1>
+        <p class="text-xl font-medium text-gray-700"><%= profile.email %> </p>
 
         <!-- DISPLAY LOCATION IF REQUIRED -->
         <!-- <p class="font-light text-gray-600 mt-3">India, banglore</p>
@@ -31,25 +31,25 @@
       </div> -->
       <br>
       <div class="text-center">
-        <h1 class="text-2xl">MY POSTS</h1>
+        <h1 class="text-4xl">MY POSTS</h1>
         <!-- POST HERE TAKE FROM DB AND DISPLAY HERE -->
         <% for( let index = 0; index < profile.blogs.length; index++ ) { %>
-          <div class="transition-all duration-150  w-96 h-96 px-3  py-6 md:w-1/2 lg:w-1/3 ">
+          <div class="transition-all duration-150  w-auto h-96 px-3  py-6 mx-auto md:w-1/2 lg:w-1/3 ">
             <div class="flex flex-col items-stretch min-h-full pt-2 pb-4 mb-6 transition-all duration-150 bg-white rounded-lg shadow-lg hover:shadow-2xl">
               <div class="px-5 py-2 mt-2 ">
                 <div class="flex items-center justify-between">
                   <div class="flex items-center flex-1">
-                    <img
+                    <!-- <img
                       class="object-cover h-10 rounded-full"
                       src="https://thumbs.dreamstime.com/b/default-avatar-photo-placeholder-profile-icon-eps-file-easy-to-edit-default-avatar-photo-placeholder-profile-icon-124557887.jpg"
                       alt="user_image"
-                    />
+                    /> -->
                     <div class="flex flex-col mx-2  ">
                       
-                      <span class="mx-1 text-xs text-gray-600">date haku</span>
+                      <!-- <span class="mx-1 text-xs text-gray-600">date haku</span> -->
                     </div>
                   </div>
-                  <p class="mt-1 text-xs text-gray-600">time read ago</p>
+                  <!-- <p class="mt-1 text-xs text-gray-600">time read ago</p> -->
                 </div>
                 <p class="flex flex-row flex-wrap w-full px-4 py-6 overflow-hidden text-sm text-justify text-gray-700">
                   <%= profile.blogs[index].blogMessage %> 
@@ -57,7 +57,7 @@
                 <div class="relative ">
                   <div class=" inset-y-0 bottom-0 left-0 right-0  justify-center items-end">
                     <form class="flex justify-center my-2" action="./index/<%= profile.blogs[index].id%>" method="">
-                      <button type="submit" class="inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-blue-700 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
+                      <button type="submit" class="inline-block px-6 py-2.5 bg-teal-400 text-white font-medium text-xs leading-tight uppercase rounded shadow-md hover:bg-purple-500 hover:shadow-lg focus:bg-blue-700 focus:shadow-lg focus:outline-none focus:ring-0 active:bg-blue-800 active:shadow-lg transition duration-150 ease-in-out">comment</button>
                     </form>
                   </div>
                 </div>
