--- a/views/blog_view.ejs
+++ b/views/blog_view.ejs
@@ -61,14 +61,14 @@
           alt="user_image"
         />
         <div class="mt-2 mx-2  ">
-          <a href="/profile/<%=blogv.coments[index].username %>" class="font-semibold text-gray-700 hover:underline">
-            <%=blogv.coments[index].username %>
+          <a href="/profile/<%=blogv.comments[index].username %>" class="font-semibold text-gray-700 hover:underline">
+            <%=blogv.comments[index].username %>
           </a>
           <!-- <span class="mx-1 text-xs text-gray-600">date haku</span> -->
         </div>
          
         </div>
-        <p class="mx-12 mb-4 "><%=blogv.coments[index].comment %></p>
+        <p class="mx-12 mb-4 "><%=blogv.comments[index].comment %></p>
       </div>
       <hr class="border border-t-2xl ">
       <% } %>
