final ka baap commit

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,7 +9,7 @@
               class="grow-0 shrink-1 md:shrink-0 basis-auto xl:w-6/12 lg:w-6/12 md:w-9/12 mb-12 md:mb-0"
             >
               <img
-                src="https://source.unsplash.com/random/800×534/?code,blue"
+                src="https://source.unsplash.com/random/800×534/?blog"
                 class="w-full h-5/6 border-solid border-4 border-blue-300 rounded-3xl "
                 alt="Sample image"
               />
